src/examples/error/204.vue
<template>
    <div class="mt-notification">
        <div class="mt-notification-content">
            <div class="mt-notification-icon mt-notification-no"></div>
            <a href="/" class="mt-notification-back">点击返回</a>
        </div>
    </div>
</template>

<script>
    export default{
        data () {
            return {
                msg: '404'
            };
        },
    };
</script>

<style lang="scss" src="./error.scss">
</style>
